[gd_scene load_steps=3 format=3 uid="uid://dkqd54rbdol3d"]

[ext_resource type="FontFile" uid="uid://cg22w5hlylg15" path="res://assets/fonts/Simbiot.ttf" id="1_jren4"]
[ext_resource type="Script" uid="uid://d35aue2vt7fcj" path="res://scrips/user_interface/pause.gd" id="1_u7col"]

[node name="pausa" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7col")

[node name="pause" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -279.0
offset_right = 200.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="resume" type="Button" parent="pause"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jren4")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="options" type="Button" parent="pause"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jren4")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="main_menu" type="Button" parent="pause"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jren4")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="quit" type="Button" parent="pause"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jren4")
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="pause/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="pause/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="pause/quit" to="." method="_on_quit_pressed"]
